# agent-trace

./: .gitignore  README.md  pyproject.toml
agent_trace/: __init__.py
agent_trace/adapters/base/: agents.py  tasks.py  tools.py
agent_trace/adapters/crew/: agents.py  capture.py  react.py  tasks.py  tools.py
agent_trace/adapters/langgraph/: agents.py  tools.py
agent_trace/cli/: __init__.py  main.py
agent_trace/core/: schema.py  store.py  trace.py
agent_trace/logging/: logger.py
examples/: crew_ai_auto_wrap_capture.py  crew_ai_auto_wrap_react.py  crew_ai_auto_wrap_tasks.py  crew_ai_auto_wrap_tools_decorator.py  simple_mock_example.py
examples/crew_ai/: crew_ai_auto_wrap_agents.py  crew_ai_auto_wrap_tasks_agents_tools.py  crew_ai_auto_wrap_tools_explicit.py
examples/langgraph/: langgraph_node.py
scripts/: get_crew_attributes.py  get_langgraph_attributes.py
tests/: test_trace.py
